deploy: d97f6e51e5dec41b08d6eac0c984bd4bbf020433

--- a/Utils/Backends.html
+++ b/Utils/Backends.html
@@ -24,6 +24,7 @@
       <li><a href="#is_xen_pv">is_xen_pv</a></li>
       <li><a href="#is_svirt_except_s390x">is_svirt_except_s390x</a></li>
       <li><a href="#is_pvm">is_pvm</a></li>
+      <li><a href="#is_ipmi">is_ipmi</a></li>
     </ul>
   </li>
 </ul><h1>lib/Utils/Backends.pm</h1>
@@ -69,6 +70,10 @@
 <h2 id="is_pvm">is_pvm</h2>
 
 <p>Returns true if the current instance is running as PowerVM backend &#39;spvm&#39; or &#39;hmc_pvm&#39;</p>
+
+<h2 id="is_ipmi">is_ipmi</h2>
+
+<p>Returns true if the current instance is running as ipmi backend</p>
 
 
 </body>
