deploy: 94b016f62cde11ce6fc5f9954d7d24398c388ceb

--- a/Utils/Backends.html
+++ b/Utils/Backends.html
@@ -25,6 +25,9 @@
       <li><a href="#is_svirt_except_s390x">is_svirt_except_s390x</a></li>
       <li><a href="#is_pvm">is_pvm</a></li>
       <li><a href="#is_ipmi">is_ipmi</a></li>
+      <li><a href="#is_qemu">is_qemu</a></li>
+      <li><a href="#is_svirt">is_svirt</a></li>
+      <li><a href="#is_image_backend">is_image_backend</a></li>
     </ul>
   </li>
 </ul><h1>lib/Utils/Backends.pm</h1>
@@ -74,6 +77,18 @@
 <h2 id="is_ipmi">is_ipmi</h2>
 
 <p>Returns true if the current instance is running as ipmi backend</p>
+
+<h2 id="is_qemu">is_qemu</h2>
+
+<p>Returns true if the current instance is running as qemu backend</p>
+
+<h2 id="is_svirt">is_svirt</h2>
+
+<p>Returns true if the current instance is running as svirt backend</p>
+
+<h2 id="is_image_backend">is_image_backend</h2>
+
+<p>Returns true if the current instance is running on backend with image support</p>
 
 
 </body>
