--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Documentation of libs
 <li><a href=Utils/Architectures.html>Utils/Architectures.pm</a></li>
 <li><a href=Utils/Backends.html>Utils/Backends.pm</a></li>
 <li><a href=Utils/Systemd.html>Utils/Systemd.pm</a></li>
+<li><a href=YaST/Module.html>YaST/Module.pm</a></li>
 <li><a href=YaST/NetworkSettings/AbstractNetworkSettingsController.html>YaST/NetworkSettings/AbstractNetworkSettingsController.pm</a></li>
 <li><a href=apachetest.html>apachetest.pm</a></li>
 <li><a href=apparmortest.html>apparmortest.pm</a></li>
