--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Documentation of libs
 <li><a href=Installation/Partitioner/LibstorageNG/SuggestedPartitioningPage.html>Installation/Partitioner/LibstorageNG/SuggestedPartitioningPage.pm</a></li>
 <li><a href=Installation/Partitioner/LibstorageNG/v3/ExpertPartitionerController.html>Installation/Partitioner/LibstorageNG/v3/ExpertPartitionerController.pm</a></li>
 <li><a href=Installation/Partitioner/LibstorageNG/v4/ExpertPartitionerController.html>Installation/Partitioner/LibstorageNG/v4/ExpertPartitionerController.pm</a></li>
+<li><a href=Installation/Partitioner/LibstorageNG/v4_3/GuidedSetupController.html>Installation/Partitioner/LibstorageNG/v4_3/GuidedSetupController.pm</a></li>
 <li><a href=Mitigation.html>Mitigation.pm</a></li>
 <li><a href=Remote/Lab.html>Remote/Lab.pm</a></li>
 <li><a href=Utils/Architectures.html>Utils/Architectures.pm</a></li>
